--- a/Chimie/tableau_VSEPR.tex
+++ b/Chimie/tableau_VSEPR.tex
@@ -2,11 +2,11 @@
 
 \documentclass[border=10pt]{standalone}
 
-\usepackage{chemfig}
-\usepackage{chemmacros}
+\usepackage{chemfig}  
+\usepackage{chemmacros}  % orbital
 \usepackage{makecell}
-\usepackage{bm}
-\usepackage[version=4]{mhchem}
+\usepackage{bm}  % bold maths
+\usepackage[version=4]{mhchem}  % \ce command
 \usepackage{upgreek}
 
 
